<resources>
    <string name="app_name">Sudoku</string>
    <string name="sudoku">SUDOKU</string>
    <string name="continue_game">CONTINUE GAME</string>
    <string name="new_game">NEW GAME</string>
    <string name="setting">Setting</string>
    <string name="mistakes">Mistakes 0/3</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
    <string name="note">Note</string>
    <string name="hint">Hint</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="empty"></string>

    <string name="numGaems">Games Played</string>
    <string name="wonGames">Games Won</string>
    <string name="winrate">Win Rate</string>
    <string name="bestTime">Best Time</string>
    <string name="avgTime">Average Time</string>
    <string name="worstTime">Worst Time</string>
    <string name="bestScore">Best Score</string>
    <string name="avgScore">Average Score</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="welcome">Welcome</string>
    <string name="nickname">Your nickname</string>
    <string name="play">Play Game</string>

    <string name="name">Nickname</string>
    <string name="bgm">Background Music</string>
    <string name="soundEffect">Sound Effect</string>
    <string name="timer">Timer</string>
    <string name="unlimitedHints">Unlimited Hints</string>
    <string name="unlimitedMistakes">Unlimited Mistakes</string>
    <string name="confirm">Confirm</string>

    <string name="newDailyAssignment">New Daily Assignment</string>
    <string name="solved">You Already Participated!</string>

</resources>
