<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/sudoku_relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/sudoku_text_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/empty"/>

            <TextView
                android:id="@+id/sudoku_text_mistake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/empty"/>

            <TextView
                android:id="@+id/sudoku_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/empty"/>

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sudoku_relative_top"
        android:layout_above="@id/sudoku_relative_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sudoku_recyclerview_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/sudoku_relative_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/sudoku_button_erase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_delete_black_24dp"
                    android:text="@string/erase" />

                <Button
                    android:id="@+id/sudoku_button_note_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_create_black_24dp"
                    android:text="@string/note" />

                <Button
                    android:id="@+id/sudoku_button_note_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_create_black_24dp"
                    android:visibility="gone"
                    android:text="@string/note" />

                <Button
                    android:id="@+id/sudoku_button_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_lightbulb_outline_black_24dp"
                    android:text="@string/hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sudoku_button_select1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/sudoku_button_select2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/sudoku_button_select3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/sudoku_button_select4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/sudoku_button_select5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/sudoku_button_select6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/sudoku_button_select7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/sudoku_button_select8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/sudoku_button_select9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:background="@android:color/transparent"
                    android:text="@string/nine" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>