<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:text="@string/welcome"
        android:textSize="60sp"
        android:gravity="center"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/landing_text_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/nickname"
        android:textAlignment="center"
        android:background="@drawable/button_border_white"/>

    <Button
        android:id="@+id/landing_button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button_border_blue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/play"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

</LinearLayout>