<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/setting_ibutton_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_tag_faces_black_24dp" />

            <TextView
                android:id="@+id/setting_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/setting_button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:text="@string/confirm"
                android:textAllCaps="false"/>

        </LinearLayout>

        <EditText
            android:id="@+id/setting_edit_nickname"
            android:theme="@style/ThemeOverlay.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_timer_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timer"
            android:textSize="20sp"/>

        <Switch
            android:id="@+id/setting_switch_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/CustomSwitch"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_vpn_key_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unlimitedHints"
            android:textSize="20sp"/>

        <Switch
            android:id="@+id/setting_switch_hints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/CustomSwitch"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_sentiment_dissatisfied_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unlimitedMistakes"
            android:textSize="20sp"/>

        <Switch
            android:id="@+id/setting_switch_mistakes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/CustomSwitch"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_volume_up_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/soundEffect"
            android:textSize="20sp"/>

        <Switch
            android:id="@+id/setting_switch_sound_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/CustomSwitch"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_surround_sound_black_24dp" />

            <TextView
                android:id="@+id/setting_bgm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bgm"
                android:textSize="20sp"/>

            <Switch
                android:id="@+id/setting_switch_bgm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CustomSwitch"
                android:checked="true"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/setting_spinner_bgm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>

</LinearLayout>