<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fragment_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/home_ibutton_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_settings_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:gravity="center"
                android:text="@string/sudoku"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/home_button_continue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/continue_game"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_background"
                android:textSize="24sp" />

            <Button
                android:id="@+id/home_button_new"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/new_game"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_background"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/fragment_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/navigation"
        app:labelVisibilityMode="labeled"/>

</RelativeLayout>